force-app/main/default/objects/Facial_Treatment_s__c/Facial_Treatment_s__c.object-meta.xml
<CustomObject>
    <label>Facial Treatment Record</label>
    <nameField>
        <label>Facial Treatment(s) Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Facial Treatment Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>