force-app/main/default/objects/Facial_Treatment_s__c/fields/Facial_Treatment__c.field-meta.xml
<CustomField>
    <fullName>Facial_Treatment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facial Treatment</label>
    <referenceTo>Facial_Treatment__c</referenceTo>
    <relationshipName>Facial_Treatments</relationshipName>
    <type>Lookup</type>
</CustomField>