force-app/main/default/objects/Facial_Treatment_s__c/fields/Mask__c.field-meta.xml
<CustomField>
    <fullName>Mask__c</fullName>
    <label>Mask</label>
    <length>255</length>
    <type>Text</type>
</CustomField>