force-app/main/default/objects/Facial_Treatment_s__c/fields/Steam__c.field-meta.xml
<CustomField>
    <fullName>Steam__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Steam</label>
    <type>Checkbox</type>
</CustomField>